# lab

./: .env  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  404.html  CNAME  README.md  index.html  mkdocs.yml  pyproject.toml  taskfile.yaml
.devcontainer/: Dockerfile  devcontainer.json  post_install.sh
.github/workflows/: ci.yaml  docker.yaml  k8s-manifests.yaml  release-docs  release-docs.yaml
databases/mysql/: bootstrap_ghost.sql
development/: index.html
diagrams/: infrastructure.py  kubernetes.py  tooling.py  utilities.py
dockerfiles/argocd_diff/: .dockerignore  Dockerfile  k8s.diff  test.sh
dockerfiles/argocd_diffs/: Dockerfile
dockerfiles/argocd_tanka_sidecar/: .dockerignore  Dockerfile  plugin.yaml
dockerfiles/argocd_tools/: Dockerfile  diff.md.tmpl
docs/: development.md  index.md  infrastructure.md  kubernetes.md  tooling.md
docs/diagrams/: infrastructure.py  kubernetes.py  tooling.py  utilities.py
infrastructure/: index.html
jsonnet/lab/: jsonnetfile.lock.json  utils.test.libsonnet
jsonnet/manifests/: config.libsonnet  configs.libsonnet  jsonnetfile.json  jsonnetfile.lock.json  k8s.libsonnet  manifests.libsonnet  manifests.test.libsonnet  onePWSecrets.libsonnet  onePWSecrets.test.libsonnet  testUtils.libsonnet  utils.libsonnet  utils.test.libsonnet  wrapper.libsonnet  wrapper.test.libsonnet
kubernetes/: index.html
kubernetes/archive/: Chart.yaml  values.yaml
scripts/: argocd_diff.sh
search/: search_index.json
tasks/: argocd.yaml  docker.yaml  docs.yaml  jsonnet.yaml  k8s.yaml  python.yaml  tofu.yaml
tooling/: index.html
(+93 files in other folders)
